--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section>
                 <div>
                     <h2>Meus Jogos</h2>
-                    <p>Games que curto jogar</p>
+                    <p>Games que gosto jogar</p>
 
                     <ul class="game-list">
                         <li>
@@ -45,10 +45,10 @@
                     
                          <li>
                             <a 
-                            href="https://www.twitch.tv/directory/game/FIFA%2022"
+                            href="https://www.twitch.tv/directory/game/FIFA%2023"
                              target="_blank">
                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/1869092879_IGDB-144x192.jpg"
-                                 alt="Fifa 22">
+                                 alt="Fifa 23">
                                 </a>
 
                          </li>
@@ -60,7 +60,7 @@
             <section>
                 <div>
                     <h2> Canais e Streamers </h2>
-                    <p> Lista de canais que não perco! </p>
+                    <p> Streamers que acompanho </p>
 
                     <ul class="channel-list">
                         <li>
@@ -96,7 +96,7 @@
             <section>
                 <div>
                     <h2>Minhas Redes</h2>
-                    <p>Se quiser falar comigo, é nois</p>
+                    <p>Minhas Redes</p>
 
                     <ul class="social-list">
                         <li>
